style: playlist-head top gap fix

--- a/src/App.css
+++ b/src/App.css
@@ -733,7 +733,7 @@
 }
 .playlist-head {
   position: sticky;
-  top: 0;
+  top: -4.25px;
   z-index: 2;
   height: 38px;
   font-size: 12px;
